# pink-accents

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: main.yaml
examples/: autumn.py  clown.py  computer.py  cowboy.py  dashes.py  drunk.py  e.py  leet.py  mime.py  owo.py  reversed.py  schizophrenia.py  scotsman.py  slav.py  spurdo.py  stutter.py  swedish.py
pink_accents/: __init__.py  __main__.py  accent.py  cli.py  context.py  errors.py  match.py  replacement.py  types.py
pink_accents/samples/: _shared.py  autumn.py  b64.py  binary.py  clown.py  cowboy.py  dashes.py  drunk.py  dyslexic.py  e.py  french.py  leet.py  owo.py  reversed.py  schizophrenia.py  scotsman.py  sha256.py  slav.py  spurdo.py  stutter.py  swedish.py
src/pink_accents/: __init__.py  __main__.py  accent.py  context.py  match.py  replacement.py  types.py
tests/: conftest.py  test_main.py
